// Use this DBML code on https://dbdiagram.io/

Table User {
  _id ObjectId [pk]
  googleId String [unique, not null]
  email String [unique, not null]
  name String [not null]
  avatar String
  role String [default: 'user']
  nickname String
  phone String
  university String
  studentId String
  bio String
  profileComplete Boolean [default: false]
  isNewUser Boolean [default: true]
  banned Boolean [default: false]
  rating Number [default: 5.0]
  ratingCount Number [default: 0]
  totalSales Number [default: 0]
  totalOrders Number [default: 0]
  location_lat Number
  location_lng Number
  createdAt Date
  updatedAt Date
}

Table Product {
  _id ObjectId [pk]
  title String [not null]
  description String [not null]
  price Number [not null]
  category String [not null]
  condition String [not null]
  images "Array of String"
  seller ObjectId [ref: > User._id, not null]
  status String [default: 'ACTIVE']
  reported Boolean [default: false]
  aiDescription String
  views Number [default: 0]
  interested Number [default: 0]
  ratingAverage Number [default: 0]
  ratingCount Number [default: 0]
  location_address String
  location_lat Number
  location_lng Number
  buyer ObjectId [ref: > User._id]
  soldAt Date
  createdAt Date
  updatedAt Date
}

Table Order {
  _id ObjectId [pk]
  product ObjectId [ref: > Product._id, not null]
  buyer ObjectId [ref: > User._id, not null]
  seller ObjectId [ref: > User._id, not null]
  priceSnapshot Number [not null]
  deliveryMode String [not null]
  paymentMode String [not null]
  shippingAddress_name String
  shippingAddress_phone String
  shippingAddress_street String
  shippingAddress_district String
  shippingAddress_city String
  shippingAddress_lat Number
  shippingAddress_lng Number
  note String
  status String [default: 'PENDING']
  conversation ObjectId [ref: - Conversation._id]
  pickupLocation_address String
  pickupLocation_lat Number
  pickupLocation_lng Number
  confirmedAt Date
  completedAt Date
  cancelledAt Date
  timeline "Array of TimelineEntry"
  dispute_status String [default: 'OPEN']
  dispute_openedBy ObjectId [ref: > User._id]
  dispute_openedRole String
  dispute_category String
  dispute_reason String
  dispute_description String
  dispute_evidenceImages "Array of String"
  dispute_openedAt Date
  dispute_resolvedBy ObjectId [ref: > User._id]
  dispute_resolution String
  dispute_resolutionNote String
  dispute_resolvedAt Date
  createdAt Date
  updatedAt Date
}

Table Conversation {
  _id ObjectId [pk]
  participants "Array of ObjectId" [ref: > User._id]
  product ObjectId [ref: > Product._id, not null]
  lastMessage String
  createdAt Date
  updatedAt Date
}

Table Message {
  _id ObjectId [pk]
  conversationId ObjectId [ref: > Conversation._id, not null]
  sender ObjectId [ref: > User._id, not null]
  text String
  imageUrl String
  isRead Boolean [default: false]
  createdAt Date
  updatedAt Date
}

Table Favorite {
  _id ObjectId [pk]
  user ObjectId [ref: > User._id, not null]
  product ObjectId [ref: > Product._id, not null]
  createdAt Date
  updatedAt Date
}

Table Notification {
  _id ObjectId [pk]
  recipient ObjectId [ref: > User._id, not null]
  sender ObjectId [ref: > User._id]
  type String
  title String [not null]
  message String [not null]
  link String
  isRead Boolean [default: false]
  createdAt Date
  updatedAt Date
}

Table Rating {
  _id ObjectId [pk]
  ratedEntity String [not null, note: 'product or user']
  entityId ObjectId [not null]
  rater ObjectId [ref: > User._id, not null]
  score Number [not null]
  comment String
  order ObjectId [ref: > Order._id]
  createdAt Date
  updatedAt Date
}

Table Report {
  _id ObjectId [pk]
  reporter ObjectId [ref: > User._id, not null]
  targetType String [not null, note: 'product or user']
  targetId ObjectId [not null]
  reason String [not null]
  content String
  status String [default: 'pending']
  adminNotes String
  resolvedAt Date
  resolvedBy ObjectId [ref: > User._id]
  createdAt Date
  updatedAt Date
}

Table SystemSettings {
  _id ObjectId [pk]
  platformName String [default: 'Campus Marketplace']
  serviceFee Number [default: 0]
  productImageLimit Number [default: 5]
  supportEmail String [default: 'support@campusmkt.vn']
  lastUpdatedBy ObjectId [ref: > User._id]
  createdAt Date
  updatedAt Date
}
